some styling but not much

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Recipe Search</title>
     <meta name="description" content=" " />
     <meta name="author" content=" " />
     <meta name="HandheldFriendly" content="true" />
@@ -15,12 +15,13 @@
   </head>
   <link href="css/styles.css" rel="stylesheet">
   <body>
+    <h1>Totally Awesome Recipe Search</h1>
     <form>
-    <span id="searchText">Enter your ingredient search terms  <input type=text, name="searchBox", id="searchBox"/></span>
+    <span id="searchText">Enter your ingredient search term  <input type=text, name="searchBox", id="searchBox"/></span>
     <input type="button" value="Submit" id="myButton"/>
     </form>
     <div id="container">
-      
+
     </div>
 
   <script type="text/javascript" src="js/main.js "></script>
